# ComputerVision

./: README.md
Lab1/: CMakeLists.txt
Lab1/src/: lab1.cpp
Lab2/: CMakeLists.txt
Lab2/include/: filters.h
Lab2/lib/: min_max_Filter.cpp
Lab2/src/: lab2.cpp
Lab3/: CMakeLists.txt
Lab3/src/: lab3.cpp
Lab4/: CMakeLists.txt
Lab4/src/: alessio.cpp  lab4.cpp  lab4Task2.cpp  ma.txt  stefano.cpp
Lab5/: CMakeLists.txt
Lab5/src/: lab5.cpp
Lab6/: CMakeLists.txt
Lab6/src/: lab6.cpp  lab6Prova.cpp  lab6Test.cpp
Lab7/: CMakeLists.txt
Lab7/Lab7Test/: CMakeLists.txt
Lab7/Lab7Test/images/: README
Lab7/Lab7Test/include/: PanoramicImage.h  PanoramicUtils.h
Lab7/Lab7Test/lib/: PanoramicImage.cpp
Lab7/Lab7Test/src/: lab8.cpp
Lab7/Lab7TestCopy/lib/: PanoramicImage.cpp  PanoramicUtils.cpp
Lab7/Lab7TestCopy/src/: lab8.cpp
Lab7/include/: panoramic_utils.h
Lab7/lib/: PanoramicImage.cpp  panoramic_utils.cpp
Lab7/src/: lab7.cpp
Lab8/: CMakeLists.txt
Lab8/src/: lab8.cpp
Project/: CMakeLists.txt
Project/Python_scripts/: CNN_Resnet.ipynb  Conversion.ipynb  Test_RCNN.ipynb  handoverface_bb.py
Project/include/: Detector.h  Segmentator.h  detection.h  fillMaskHoles.h  handleOverlap.h  insertMask.h  iou.h  pixel_accuracy.h  randomColorMask.h  read_BB_matrix.h  read_numbers.h  read_sort_BB_matrix.h  removeOutliers.h  segmentationAlgorithm.h  segmentationCanny.h  segmentationMethods.h  segmentationOtsu.h  write_to_file.h
Project/lib/: Detector.cpp  Segmentator.cpp  detectOverlap.cpp  fillMaskHoles.cpp  handleOverlap.cpp  insertMask.cpp  randomColorMask.cpp  read_BB_matrix.cpp  read_numbers.cpp  read_sort_BB_matrix.cpp  removeOutliers.cpp  segmentationAlgorithm.cpp  write_to_file.cpp
Project/results/: performanceDetection.txt  results.txt
Project/results/Performance/: performanceDetection.txt  performanceSegmentation.txt
Project/results/performanceDetection/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  24.txt  25.txt  27.txt  28.txt  30.txt
Project/results/performanceSegmentation/: 01.txt  03.txt  04.txt  06.txt  07.txt  08.txt  10.txt  11.txt  13.txt  14.txt  16.txt  17.txt  19.txt  21.txt  22.txt  25.txt  26.txt  27.txt  28.txt  29.txt
Project/results/resultsDetection/: 02.txt  04.txt  06.txt  26.txt
Project/results/resultsDetection/BoundingBoxes/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  30.txt
Project/src/: detection.cpp  detection0.cpp  detection1.cpp  detection2.cpp  detection3.cpp  drawBB.cpp  import.cpp  iou.cpp  main.cpp  neural.cpp  newProject.cpp  onMouse.cpp  pixel_accuracy.cpp  project.cpp  readNumber.cpp  segmentationCanny.cpp  segmentationMethods.cpp  test.cpp  water.cpp  watershed.cpp  webProva.cpp  write_to_file.cpp
Project/xml_extractor/: xml_generator.cpp
